--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
 .App{
     height: 100vh;
     display: flex;
-    background-image: url('./chatbackground.jpg');
+    background-image: url('../public/background.png');
     background-size: cover;
     background-position: center;
 }
